<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Security</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="version">版本号</string>
    <string name="main">手机卫士</string>
    <string name="protecte">手机防盗</string>
    <string name="setPassword">设置密码</string>
    <string name="setPasswordDescription">设置手机防盗的密码</string>
    <string name="againPassword">请再次输入密码</string>
    <string name="protectedYes">确定</string>
    <string name="protectedNo">取消</string>
    <string name="login">登陆界面</string>
    <string name="inputPassword">请输入密码</string>
    <string name="setupGuide">设置向导</string>
    <string name="guide1">1.欢迎使用手机防盗</string>
    <string name="guide1_content">您的手机防盗卫士：</string>
    <string name="guide1_item1">SIM卡变更报警</string>
    <string name="guide1_item2">gps追踪</string>
    <string name="guide1_item3">远程销毁数据</string>
    <string name="guide1_item4">远程锁屏</string>
    <string name="guide2">2.手机卡绑定</string>
    <string name="guide2_content">如果sim卡绑定，如果下次更换的话，就会自动发送短信</string>
    <string name="guide2_item1">绑定</string>
    <string name="guide2_item2">没有绑定</string>
    <string name="guide3">3.设置安全号码</string>
    <string name="guide3_content">如果sim卡更换后，会把短信发送到该号码上</string>
    <string name="guide3_item1">请输入一个或选择手机安全号码</string>
    <string name="guide3_item2">选择联系人</string>
    <string name="guide4">4.恭喜你，设置已经完成</string>
    <string name="guide4_content">您的手机设置已经完成</string>
    <string name="guide4_item1">手机没有开启保护</string>
    <string name="guide4_item2">手机已经开启保护了</string>
    <string name="next">下一步</string>
    <string name="pervious">上一步</string>
    <string name="finish">完成</string>
    <string name="selectContact">选择联系人</string>
    <string name="lostProtectedNumber">安全号码</string>
    <string name="isProtected">已经开启保护</string>
    <string name="rePlayGuide">重新进入设置向导</string>
    <string name="atool">高级工具</string>
    <string name="query">手机号码归属地查询</string>
    <string name="bt_query">查询</string>
    <string name="queryNumber">号码归属地查询</string>
    <string name="number_service">设置手机通讯服务</string>
    <string name="number_service_state">归属地服务未开启</string>
    <string name="select_bg">归属地显示风格</string>
    <string name="number_display">归属地显示位置</string>
    <string name="drag_view_desc">拖动紫色方块来确定归属地显示位置</string>
    <string name="numberSecurity">通信卫士</string>
    <string name="add">添加</string>
    <string name="update_number">修改黑名单</string>
    <string name="delete_number">删除黑名单</string>
    <string name="sms_backup">短信备份</string>
    <string name="sms_restore">短信还原</string>
    <string name="app_manager">所有应用</string>
    <string name="app_manager_load">正在加载中</string>
    <string name="app_manager_delete">卸载</string>
    <string name="app_manager_run">运行</string>
    <string name="app_manager_share">分享</string>
    <string name="app_lock">程序锁</string>
    <string name="lock">密码输入</string>
    <string name="setting">设置中心</string>
    <string name="lock_service">设置程序锁服务</string>
    <string name="lock_tips">程序锁服务未开启</string>
    <string name="process_manager">进程管理</string>
    <string name="process_memory">运行的进程</string>
    <string name="process_count">使用的内存</string>
    <string name="process_clear">一键清理</string>
    <string name="process_setting">进程设置</string>
    <string name="security_desc">权限列表：</string>
    <string name="show_setting">显示设置</string>
    <string name="show_tips">不显示系统进程</string>
    <string name="clean_setting">设置锁屏清理内存</string>
    <string name="clean_tips">锁屏不清理内存</string>
    <string name="common_number">常用电话查询</string>
    <string name="commonNumber">常用电话</string>
    <string name="traffic_manager">流量管理</string>
    <string name="traffic">00.00KB</string>
    <string name="optimize">系统优化</string>
    <string name="cache_clear">清理缓存</string>
    <string name="dataSize">数据大小00.00KB</string>
    
</resources>
