<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_atool_query"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dip"
            android:text="@string/query"
            android:textSize="24sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_marginBottom="8dip"
            android:layout_marginTop="8dip"
            android:background="#aabc04e5" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="280dip"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="280dip"
                    android:layout_height="wrap_content"
                    android:text="@string/number_service"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_atool_number_service_state"
                    android:layout_width="280dip"
                    android:layout_height="wrap_content"
                    android:text="@string/number_service_state"
                    android:textColor="#ffff0000"
                    android:textSize="14sp" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/cb_atool_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_marginBottom="8dip"
            android:layout_marginTop="8dip"
            android:background="#aabc04e5" />

        <TextView
            android:id="@+id/tv_atool_select_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_bg"
            android:textSize="24sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_marginBottom="8dip"
            android:layout_marginTop="8dip"
            android:background="#aabc04e5" />

        <TextView
            android:id="@+id/tv_atool_change_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/number_display"
            android:textSize="24sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_marginBottom="8dip"
            android:layout_marginTop="8dip"
            android:background="#aabc04e5" />

        


        <TextView
            android:id="@+id/tv_atool_sms_backup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sms_backup"
            android:textSize="24sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_marginBottom="8dip"
            android:layout_marginTop="8dip"
            android:background="#aabc04e5" />

        <TextView
            android:id="@+id/tv_atool_sms_restore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sms_restore"
            android:textSize="24sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_marginBottom="8dip"
            android:layout_marginTop="8dip"
            android:background="#aabc04e5" />

        <TextView
            android:id="@+id/tv_atool_app_lock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_lock"
            android:textSize="24sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_marginBottom="8dip"
            android:layout_marginTop="8dip"
            android:background="#aabc04e5" />

        <TextView
            android:id="@+id/tv_atool_common_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/common_number"
            android:textSize="24sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_marginBottom="8dip"
            android:layout_marginTop="8dip"
            android:background="#aabc04e5" />
    </LinearLayout>

</ScrollView>